--- a/index2.org
+++ b/index2.org
@@ -8304,6 +8304,8 @@ http://joelcadwell.blogspot.com.au/2015/11/statistical-models-that-support-desig
   #' @param clusters_col optional column identifying clusters
   #' @param todo_col optional column with TODO status (DONE and WONTDO will be white, others are red)
   #' @return character string object that has the DOT language representatio of the input
+  #' @export
+  #' 
   newnode <- function(indat, names_col = NULL, in_col = NULL, out_col = NULL, desc_col = NULL, clusters_col = NULL, todo_col = NULL, nchar_to_snip = 40, colour_col = NULL){
   if (is.null(names_col)) stop("Names of the steps are needed")
   if (is.null(in_col)) stop("Inputs are needed")
